--- a/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
+++ b/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,49 +18,74 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot your Password?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfM-QK-qyu">
-                                <rect key="frame" x="30" y="79" width="333" height="21"/>
+                                <rect key="frame" x="54" y="79" width="285" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V2w-HA-AkA">
-                                <rect key="frame" x="30" y="130" width="333" height="34"/>
+                                <rect key="frame" x="30" y="130.66666666666666" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eI2-w8-Hl0">
-                                <rect key="frame" x="30" y="204" width="333" height="35"/>
+                                <rect key="frame" x="30" y="204.66666666666666" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Recover"/>
+                                <connections>
+                                    <action selector="tappedRecoverButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7wl-4u-GYT"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gringo3" translatesAutoresizingMaskIntoConstraints="NO" id="MHt-7X-00C">
-                                <rect key="frame" x="30" y="299" width="333" height="238"/>
+                                <rect key="frame" x="30" y="299.66666666666669" width="333" height="238.00000000000006"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="333" id="FYV-Lq-faT"/>
                                     <constraint firstAttribute="height" constant="238" id="iKn-cb-3NA"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jEW-ee-uw3">
+                                <rect key="frame" x="30" y="69.666666666666671" width="14" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="14" id="rUW-la-ZSw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <imageReference key="image" image="chevron.backward" catalog="system" symbolScale="large"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font">
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                    </preferredSymbolConfiguration>
+                                </state>
+                                <connections>
+                                    <action selector="tappedReturnButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ReS-hc-qe6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="eI2-w8-Hl0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="DO8-vB-das"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="V2w-HA-AkA" secondAttribute="trailing" constant="30" id="FvA-bS-eL0"/>
+                            <constraint firstItem="sfM-QK-qyu" firstAttribute="leading" secondItem="jEW-ee-uw3" secondAttribute="trailing" constant="10" id="Kka-eF-Awq"/>
+                            <constraint firstItem="jEW-ee-uw3" firstAttribute="centerY" secondItem="sfM-QK-qyu" secondAttribute="centerY" id="NP1-kx-x9p"/>
+                            <constraint firstItem="jEW-ee-uw3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="Oju-5n-CzY"/>
                             <constraint firstItem="sfM-QK-qyu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="RHE-KX-waV"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="eI2-w8-Hl0" secondAttribute="trailing" constant="30" id="XYT-Jv-OFr"/>
                             <constraint firstItem="V2w-HA-AkA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="aG9-MD-KX5"/>
                             <constraint firstItem="MHt-7X-00C" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="d9P-6F-989"/>
                             <constraint firstItem="eI2-w8-Hl0" firstAttribute="top" secondItem="V2w-HA-AkA" secondAttribute="bottom" constant="40" id="eDq-Pe-Swk"/>
-                            <constraint firstItem="sfM-QK-qyu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="k94-w2-KE5"/>
+                            <constraint firstItem="V2w-HA-AkA" firstAttribute="top" secondItem="sfM-QK-qyu" secondAttribute="bottom" constant="31.329999999999998" id="ejO-f0-KRt"/>
                             <constraint firstItem="MHt-7X-00C" firstAttribute="top" secondItem="eI2-w8-Hl0" secondAttribute="bottom" constant="60" id="shp-tJ-yde"/>
-                            <constraint firstItem="V2w-HA-AkA" firstAttribute="top" secondItem="sfM-QK-qyu" secondAttribute="bottom" constant="30" id="uN0-8f-qxT"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sfM-QK-qyu" secondAttribute="trailing" constant="30" id="yn2-Ew-2t9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sfM-QK-qyu" secondAttribute="trailing" constant="54" id="yn2-Ew-2t9"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="V2w-HA-AkA" id="7zr-43-nIa"/>
                         <outlet property="forgotPasswordLabel" destination="sfM-QK-qyu" id="WST-Xh-Tby"/>
                         <outlet property="recoverButton" destination="eI2-w8-Hl0" id="z07-B1-cgs"/>
+                        <outlet property="retunButton" destination="jEW-ee-uw3" id="bDx-sO-pJh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -68,6 +94,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <image name="gringo3" width="893" height="1271"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
